Back to development: 0.1.11

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+0.1.11 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 0.1.10 (2012-10-14)
 -------------------
 
