--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+0.1.12 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 0.1.11 (2012-10-25)
 -------------------
 
