--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog
 0.1.12 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Make sure the cycle script is run as run and only when there is a pound socket.
 
 
 0.1.11 (2012-10-25)
