Back to development: 0.1.13

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+0.1.13 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 0.1.12 (2013-01-21)
 -------------------
 
