--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+0.1.14 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 0.1.13 (2013-01-28)
 -------------------
 
